# SD-backend-and-model

./: .env.example  .gitignore  README.md  add_columns.py  alembic.ini  check_trips.py  environment.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20260321_add_trip_scoring_fields.py  20260328_add_trip_review_fields.py  20260505_add_driving_event_occurrence_fields.py  5e2ece5421a1_add_ml_fields_to_trips.py  905c113c790f_init.py
app/: main.py
app/api/: __init__.py  deps.py
app/core/: __init__.py  config.py  errors.py  jwt.py  logging.py  security.py
app/db/: __init__.py  base.py  init_db.py  session.py
app/ml/: auto_retrain.py  braking.py  config.py  event_generation.py  features.py  inference.py  interference.py  model_registry.py  pipeline.py  preprocessing.py  schemas.py  scoring_rules.py
app/repositories/: __init__.py  driving_event_repository.py  sensor_sample_repository.py  trip_repository.py  user_repository.py
app/schemas/: __init__.py  admin.py  auth.py  common.py  driving_event.py  error.py  events.py  health.py  sensor_samples.py  trip.py
app/services/: __init__.py  admin_service.py  auth_service.py  (+6 more)
scripts/: analyze_drift.py  build_training_dataset.py  compare_models.py  evaluate_model.py  generate_synthetic_trips.py  promote_model.py  refresh_model_cycle.py  reporting_utils.py  reprocess_finalized_trips.py  reviewed_model_analysis.py  train_model.py  tune_risk_thresholds.py
tests/: test_api_trip_flow.py  test_ml_timestamp_scale.py  test_phase8_reporting.py  test_security.py  test_trip_processing_service.py
(+17 files in other folders)
